Database is working, but seems to have some bugs as far as negative height.

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script>
+    <!-- <script>
       const JMuxer = require('jmuxer');
       window.onload = function() {
         var socketURL = 'ws://localhost:8080';
@@ -31,7 +31,7 @@
           console.log('Socket Error');
         });
       };
-    </script>
+    </script> -->
     <title>React App</title>
   </head>
   <body>
